Fix UI jump

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,4 +42,5 @@
 .outlet-info {
   color: #fff;
   font-size: 1.1rem;
+  min-height: 1.5rem;
 }
